// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bodem with results should show the right overviewpage 1`] = `
<DocumentFragment>
  <main
    class="Page OverviewPage"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Bodem"
          class="ChapterIcon"
          fill="black"
        >
          icon_bodem.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Home
        </a>
        <h2
          class="Heading Heading__large"
        >
          Bodem
        </h2>
      </div>
    </header>
    <div
      class="PageContent"
    >
      <p>
        Op deze pagina vindt u informatie over uw lood in bodem check.
      </p>
      <p>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl/wonen-leefomgeving/bodem/lood-grond/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Right.svg
          </svg>
          Meer informatie over Loodmetingen
        </a>
      </p>
    </div>
    <section
      class="SectionCollapsible"
    >
      <h3
        class="Heading Heading__mediumLarge Title TitleWithItems"
      >
        <button
          aria-expanded="true"
          class="TitleToggle"
        >
          <svg
            aria-hidden="true"
            class="CaretIcon"
          >
            Chevron-Right.svg
          </svg>
           Lopende aanvragen
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="Panel"
        style="height: 0px;"
      >
        <div
          class="PanelInner"
        >
          <table
            class="Table"
          >
            <thead>
              <tr
                class="TableRow"
              >
                <th
                  class="DisplayProp"
                >
                  Adres
                </th>
                <th
                  class="DisplayProp"
                >
                  Aangevraagd
                </th>
                <th
                  class="DisplayProp"
                >
                  Status
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="TableRow"
              >
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Adres:
                  </span>
                  <a
                    class="Button Button__plain Button__lean Linkd"
                    href="/lood-meting/OL-001478"
                  >
                    <svg
                      aria-hidden="true"
                      class="Icon Icon__left"
                      fill="#000"
                      height="14px"
                      width="14px"
                    >
                      Chevron-Right.svg
                    </svg>
                    Schipluidenlaan 12A
                  </a>
                </td>
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Aangevraagd:
                  </span>
                  <span>
                    01 december 2022
                  </span>
                </td>
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Status:
                  </span>
                  <span>
                    Ontvangen
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
    <section
      class="SectionCollapsible"
    >
      <h3
        class="Heading Heading__mediumLarge Title TitleWithItems"
      >
        <button
          aria-expanded="true"
          class="TitleToggle"
        >
          <svg
            aria-hidden="true"
            class="CaretIcon"
          >
            Chevron-Right.svg
          </svg>
           Eerdere aanvragen
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="Panel"
        style="height: 0px;"
      >
        <div
          class="PanelInner"
        >
          <table
            class="Table"
          >
            <thead>
              <tr
                class="TableRow"
              >
                <th
                  class="DisplayProp"
                >
                  Adres
                </th>
                <th
                  class="DisplayProp"
                >
                  Aangevraagd
                </th>
                <th
                  class="DisplayProp"
                >
                  Status
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="TableRow"
              >
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Adres:
                  </span>
                  <a
                    class="Button Button__plain Button__lean Linkd"
                    href="/lood-meting/OL-001475"
                  >
                    <svg
                      aria-hidden="true"
                      class="Icon Icon__left"
                      fill="#000"
                      height="14px"
                      width="14px"
                    >
                      Chevron-Right.svg
                    </svg>
                    Schipluidenlaan 16A
                  </a>
                </td>
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Aangevraagd:
                  </span>
                  <span>
                    29 november 2022
                  </span>
                </td>
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Status:
                  </span>
                  <span>
                    Afgewezen
                  </span>
                </td>
              </tr>
              <tr
                class="TableRow"
              >
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Adres:
                  </span>
                  <a
                    class="Button Button__plain Button__lean Linkd"
                    href="/lood-meting/OL-001471"
                  >
                    <svg
                      aria-hidden="true"
                      class="Icon Icon__left"
                      fill="#000"
                      height="14px"
                      width="14px"
                    >
                      Chevron-Right.svg
                    </svg>
                    Schipluidenlaan 16A
                  </a>
                </td>
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Aangevraagd:
                  </span>
                  <span>
                    28 november 2022
                  </span>
                </td>
                <td
                  class="DisplayProp"
                >
                  <span
                    class="DisplayPropLabel"
                  >
                    Status:
                  </span>
                  <span>
                    Afgehandeld
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`Bodem without results should show the right overviewpage 1`] = `
<DocumentFragment>
  <main
    class="Page OverviewPage"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Bodem"
          class="ChapterIcon"
          fill="black"
        >
          icon_bodem.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Home
        </a>
        <h2
          class="Heading Heading__large"
        >
          Bodem
        </h2>
      </div>
    </header>
    <div
      class="PageContent"
    >
      <p>
        Op deze pagina vindt u informatie over uw lood in bodem check.
      </p>
      <p>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl/wonen-leefomgeving/bodem/lood-grond/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Right.svg
          </svg>
          Meer informatie over Loodmetingen
        </a>
      </p>
    </div>
    <section
      class="SectionCollapsible"
    >
      <h3
        class="Heading Heading__mediumLarge Title TitleWithItems"
      >
        <button
          aria-expanded="true"
          class="TitleToggle"
        >
          <svg
            aria-hidden="true"
            class="CaretIcon"
          >
            Chevron-Right.svg
          </svg>
           Lopende aanvragen
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="Panel"
        style="height: 0px;"
      >
        <div
          class="PanelInner"
        >
          <p
            class="NoItemsMessage"
          >
            U heeft nog geen loodmetingen aangevraagd.
          </p>
        </div>
      </div>
    </section>
    <section
      class="SectionCollapsible"
    >
      <h3
        class="Heading Heading__mediumLarge Title TitleWithItems"
      >
        <button
          aria-expanded="true"
          class="TitleToggle"
        >
          <svg
            aria-hidden="true"
            class="CaretIcon"
          >
            Chevron-Right.svg
          </svg>
           Eerdere aanvragen
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="Panel"
        style="height: 0px;"
      >
        <div
          class="PanelInner"
        >
          <p
            class="NoItemsMessage"
          >
            U hebt geen eerdere aanvragen.
          </p>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;
